--- a/style/scss/_custom.scss
+++ b/style/scss/_custom.scss
@@ -1,5 +1,30 @@
-a {
-    .nav-button {
-        text-decoration: none;
+$theme-colors : (
+    "primary": #6F097A,
+    "secondary": #FEFEFE,
+    "success": green,
+    "info": cyan,
+    "warning": rgb(248, 232, 0),
+    "danger": red,
+    "light": #f8f8f8,
+    "dark": #222222
+);
+
+
+header {
+    min-height: 100px;
+}
+
+.navbar-height {
+    min-height: 100px;
+}
+
+li {
+    a:hover {
+        text-decoration: underline;
+        text-underline-offset: 0.5rem;
+        text-decoration-color: #6F097A;
+        transform-origin: right;
+        scale: 1.05;
     }
 }
+
