--- a/style/scss/_custom.scss
+++ b/style/scss/_custom.scss
@@ -1,6 +1,6 @@
 $theme-colors : (
     "primary": #6F097A,
-    "secondary": #FEFEFE,
+    "secondary": #F2F2F2,
     "success": green,
     "info": cyan,
     "warning": rgb(248, 232, 0),
@@ -14,10 +14,6 @@ header {
     min-height: 100px;
 }
 
-.navbar-height {
-    min-height: 100px;
-}
-
 li {
     a:hover {
         text-decoration: underline;
@@ -26,5 +22,12 @@ li {
         transform-origin: right;
         scale: 1.05;
     }
+}
+
+.first-banner {
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../src/banners/bg-page-one.png);
+    background-size: cover;
+    background-blend-mode: darken;
+    
 }
 
