--- a/style/scss/_custom.scss
+++ b/style/scss/_custom.scss
@@ -10,20 +10,6 @@ $theme-colors : (
 );
 
 
-header {
-    min-height: 100px;
-}
-
-li {
-    a:hover {
-        text-decoration: underline;
-        text-underline-offset: 0.5rem;
-        text-decoration-color: #6F097A;
-        transform-origin: right;
-        scale: 1.05;
-    }
-}
-
 .first-banner {
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../src/banners/bg-page-one.png);
     background-size: cover;
@@ -31,3 +17,6 @@ li {
     
 }
 
+body {
+    font-family: Roboto;
+}
