--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,3 +1,5 @@
 @import "custom.scss";
+@import "header.scss";
+@import "section.scss";
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
