Сделал еще 1.5 секции. Осталось немного

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,5 +1,6 @@
 @import "custom.scss";
 @import "header.scss";
 @import "section.scss";
+@import "custom-figure.scss";
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
