--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5,6 +5,12 @@
   background-blend-mode: darken;
 }
 
+.second-banner {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../src/banners/bg-page-one-alt.png);
+  background-size: cover;
+  background-blend-mode: darken;
+}
+
 body {
   font-family: Roboto;
 }
@@ -47,6 +53,58 @@ section {
 
 .our-service-cards-text {
   margin-bottom: 1.5rem;
+}
+
+.figure-space {
+  width: 50%;
+  height: inherit;
+  position: relative;
+  margin: 0 auto;
+}
+.figure-space .line {
+  position: relative;
+  border: #8F8F8F 1px solid;
+  width: 2px;
+  height: 60vh;
+  min-height: 535px;
+  left: 50%;
+  z-index: -1;
+}
+.figure-space .super-form {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: #8F8F8F 1px solid;
+  color: #8F8F8F;
+  background-color: #f8f8f8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: calc(50% - 50px);
+}
+.figure-space #top {
+  top: 0;
+}
+.figure-space #middle {
+  top: calc(50% - 50px);
+}
+.figure-space #bottom {
+  bottom: 0;
+}
+@media screen and (width <= 992px) {
+  .figure-space {
+    margin: 0;
+  }
+  .figure-space .line {
+    display: none;
+  }
+  .figure-space .super-form {
+    width: 70px;
+    height: 70px;
+    position: static;
+    margin: 3rem;
+  }
 }
 
 /*!
