--- a/style/scss/_custom.scss
+++ b/style/scss/_custom.scss
@@ -17,6 +17,12 @@ $theme-colors : (
     
 }
 
+.second-banner {
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../src/banners/bg-page-one-alt.png);
+    background-size: cover;
+    background-blend-mode: darken;
+}
+
 body {
     font-family: Roboto;
 }
