--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -2,6 +2,10 @@ header {
     min-height: 100px;
 }
 
+footer {
+    background-image: linear-gradient(rgba(111, 9, 122, 0.7), rgba(111, 9, 122, 0.8));
+}
+
 li {
     a:hover {
         text-decoration: underline;
